# codereps.ai

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0a572307061f_add_topics_and_test_cases.py  658bdeed7323_initial_schema.py  6ea78a725c0c_add_submissions.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/auth/: router.py  schemas.py  service.py  utils.py
backend/app/courses/: models.py  router.py  schemas.py  service.py
backend/app/generation/: llm_client.py  prompts.py  router.py  schemas.py  service.py
backend/app/problems/: models.py  router.py  schemas.py  service.py
backend/app/submissions/: models.py  router.py  runner.py  schemas.py  service.py
backend/app/topics/: models.py  router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  empty.css  index.css
frontend/src/api/: auth.ts  client.ts  courses.ts  generation.ts  problems.ts  submissions.ts  topics.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: CodeBlock.tsx  CodeEditor.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/types/: auth.ts  course.ts  problem.ts  submission.ts  topic.ts
landing/: index.html
(+9 files in other folders)
